Add security headers and trust signals to prevent antivirus blocking

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
 		<title>Kinematics Drone Commander</title>
+		<meta name="description" content="Educational 3D drone simulation and command interface built with Godot Engine">
+		<meta name="keywords" content="drone, simulation, 3D, education, Godot, web game">
+		<meta name="author" content="Kinematics Education">
+		<meta name="robots" content="index, follow">
+		
+		<!-- Security and Trust Headers -->
+		<meta http-equiv="X-Content-Type-Options" content="nosniff">
+		<meta http-equiv="X-Frame-Options" content="DENY">
+		<meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
 		<style>
 html, body, #canvas {
 	margin: 0;
